Make mic transparent
wrap mic image in seperate div and assign transparency in css

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<form action="post">
 		<!-- Search Box -->
 		<input type="text" class="keyword_search">
+		<img src="mic.gif" alt="microphone" class="mic_image">
 		<!-- Submit Buttons -->
 		<input type="button" value="Google Search" class="input_button">
 		<input type="button" value="I'm Feeling Lucky" class="input_button">
